--- a/rps-multi.html
+++ b/rps-multi.html
@@ -39,15 +39,29 @@
 		<div id="playArea">
 			<div class="col-sm-4">
 				<div id="player1Area">
-					<h3 id="player1Text">Player 1</h3>
+					<h3 id="player1Text">PLAYER 1</h3>
+					<div id="choices1">
+						<h4><img src="assets/images/rock.png" alt="rock" height="30" width="30">  ROCK</h4>
+						<h4><img src="assets/images/paper.png" alt="paper" height="30" width="30">  PAPER</h4>
+						<h4><img src="assets/images/scissors.png" alt="scissors" height="30" width="30">  SCISSORS</h4>
+					</div> <!--end of choices1 div-->
+					<h3>WINS: <span id="wins1">0</span>  |  LOSSES: <span id="losses1">0</span></h3>
 				</div> <!--end of player1Area div-->
 			</div> <!--end of col1-->
 			<div class="col-sm-4">
-				<div id="resultsArea"></div>
+				<div id="resultsArea">
+					<h2>Enter your name and press Start to play</h2>
+				</div><!--end of resultsArea div-->
 			</div> <!--end of col2-->
 			<div class="col-sm-4">
 				<div id="player2Area">
-					<h3 id="player2Text">Player 2</h3>
+					<h3 id="player2Text">PLAYER 2</h3>
+					<div id="choices2">
+						<h4><img src="assets/images/rock.png" alt="rock" height="30" width="30">  ROCK</h4>
+						<h4><img src="assets/images/paper.png" alt="paper" height="30" width="30">  PAPER</h4>
+						<h4><img src="assets/images/scissors.png" alt="scissors" height="30" width="30">  SCISSORS</h4>
+					</div> <!--end of choices2 div-->
+					<h3>WINS: <span id="wins2">0</span>  |  LOSSES: <span id="losses2">0</span></h3>
 				</div> <!--end of player2Area div-->
 			</div> <!--end of col3-->
 
