--- a/rps-multi.html
+++ b/rps-multi.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 
-	<title>Multiplayer Rock Paper Scissors</title>
+	<title>MLT Rock Paper Scissors</title>
 
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -18,7 +18,7 @@
 
 	<link rel="stylesheet" href="assets/css/style.css">
 
-	<link rel="shortcut icon" href="assets/images/scissors.png">
+	<link rel="shortcut icon" href="assets/images/rock.png">
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
@@ -32,7 +32,7 @@
 
 	<form>
 		<input type="text" id="playerName" placeholder="player name">
-		<input id="startButton" type="submit" value="Start">
+		<input id="startButton" type="submit" value="START">
 	</form>
 
 	<div class="row">
